--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <div class="animsition-overlay">
   <div id="section-1">
     <header class="main_h">
-      <div class="menufix"> <a class="logo" href="index.html"><img src="img/tery.png"></a>
+      <div class="menufix"> <a class="logo" href="index.html"><img src="#"></a>
         <nav>
         </nav>
       </div>
